Fix bug: long string no longer overflows message container in main feed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: var(--subtle-gray);
 }
 
@@ -38,7 +38,7 @@ main {
 }
 
 wrapper:after {
-  content: "";
+  content: '';
   display: block;
   height: 4rem;
 }
@@ -55,7 +55,7 @@ wrapper:after {
 
 .header-container h1 {
   color: var(--gold);
-  font-family: "Lora", serif;
+  font-family: 'Lora', serif;
   font-weight: 600;
 }
 
@@ -163,6 +163,7 @@ button:hover,
   background-color: var(--midnight-slate-blue);
   margin-bottom: 2rem;
   border-radius: 0.5rem;
+  overflow-wrap: anywhere;
 }
 
 #kill-button {
